namste react js code

--- a/index.html
+++ b/index.html
@@ -1,20 +1,13 @@
 <!DOCTYPE html>
 <html>
 <header>
- <title >React Product</title>
+  <title>React Product</title>
+  <link rel="stylesheet" href="./index.css">
 </header>
 
 <body>
-    <div>
-      <h1>Laxman is pae</h1>
-      <div   id="root" ></div> 
-
-    </div>
-    <script type = "module" src="App.js"></script>
+  <div id="root"></div>
+  <script type="module" src="/src/App.js"></script>
 </body>
-
-
-
-
 
 </html>
